# oldcode

./: README.md
c/: new.sh
c/eject/: eject  eject.c
c/gdb/: A.c.workz  gdbcmd  gen_gdb  gen_gdb.c  gen_hex  gen_hex.c  getoutput
c/kernel/first/: first.c
c/kernel/hello/: hello.c
c/lib/plib/: plib  plib.c  plib.h
c/mitm/: mitm  mitm.c
c/pci/: zwerg  zwerg.c
c/pfunc/: .cvsignore  AUTHORS  COMMENTS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  comp  config.cache  config.h  config.h.in  config.status  configure  configure.in  pfunc.spec  tags  tmp
c/pfunc/doc/: Makefile  Makefile.in  pgrep.html  pgrep.txt
c/pfunc/include/: Makefile  Makefile.am  Makefile.in  global.h
c/pfunc/src/: .cvsignore  Makefile  Makefile.am  Makefile.in  pfunc.c  pgrep  pids.c  pkill  tags  version.c
c/pike_c/Blowfish/: .cvsignore  Makefile  blow.c  config.status  configure  zlib_machine.h  zlib_machine.h.in
c/pike_c/Blowfish.other/: Makefile  Makefile.in  config.status  configure  linker_options  modlist_headers  modlist_segment  module.pmod  zlib_machine.h  zlib_machine.h.in
c/pike_c/pikeblowfish/: Makefile  Makefile.in  acconfig.h  blow.c  confdefs.h  configure  configure.in  testsuite.in  zlib_machine.h  zlib_machine.h.in  zlibmod.c
c/redlib/: COMMENTS  COPYWRITE  INSTALL  Makefile  README  TODO  VERSION  autogen.sh  config.guess  config.h  config.h.in  config.status  config.sub  configure  configure.in  strlen  version.c  version.c.in
c/redlib/doc/: GC  Makefile  Makefile.am  Makefile.in  jnifiles  libmcrypt.bug  mybugreport
c/redlib/include/: .cvsignore  Makefile  Makefile.in  color.h  colour.h  crypt.h  default.h  file.h  locale.h  mem.h  module.h  module.patch  net.h  ptrace.h  redlib_RFILE_CompressFile.h  redlib_RFILE_CompressFileException.h  safe_macro.h  str.h
c/redlib/java/: CompressFileException.java  Makefile  template.java
c/redlib/java/doc/: allclasses-frame.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html  packages.html  serialized-form.html
c/redlib/java/doc/redlib/FILE/: CompressFile.html
c/redlib/java/doc/redlib/RFILE/: CompressFile.html  CompressFileException.html
c/redlib/m4/: Makefile  Makefile.am  Makefile.in  fixme.m4  jni_h.m4  module_h.m4
c/redlib/redlib-0.0.6pre/: AUTHORS  HACKING  INSTALL  Makefile.am  Makefile.in  NEWS  README  VERSION  acconfig.h  aclocal.m4
c/redlib/redlib-0.0.6pre/include/: Makefile.am  Makefile.in  color.h  colour.h  crypt.h  cyphers.h  error.h  java.h  module.h.in  module.patch.in  net.h
c/redlib/redlib-0.0.6pre/java/: CompressFile.java  Makefile.am  Makefile.in
c/redlib/src/: .cvsignore  Makefile  Makefile.am  Makefile.in  colour  colour.c  core  crypt  crypt.c  curses.c  db.c  error.c  file.c  init.c  java.c  l18n.c  libred.so.0  libred.so.0.0  load  marque.c  mem.c  misc.c  module.c  net  net.c  ptrace.c  str.c  test  test.c  test2
c/redlib/test/: Makefile.am  Makefile.in  Makefile.testtmp  colour  colour.c  configure  configure.in  curses.c  fd  fd.c  funcinfunc.c  interp.c  mcrypt  mcrypt.c  mem  mem.c  pipe.c  plaap  plaap.bz2  strlen.c  template.c  test  test.c  threadpool  threadpool.c  threadpool.h  tja.c.in  tmp  tmp.c  twofish.f  un  un.c
c/redlib/test/GC/: dis  dl_check  dl_check.c  gc  gc.S  gc.c  gc.gdb  gc.old  gc2.S  newgc  newgc.c  skip  skip.c  test  test.S  test.c
c/redlib/test/base64/: base64  base64.c
c/redlib/test/db/BerkleyDB/: berkley  berkley.c
c/redlib/test/db/LDAP/: ldap  ldap.c
c/redlib/test/db/db1/: dbtest.c  dbtest2  dbtest2.c  testfile
c/redlib/test/graphix/lesstif/: lesstif  lesstif.c
c/redlib/test/graphix/qt/: QT  QT.cc  moc_xdvng_h.cc  moc_xdvngbutton_h.cc  xdvng.h  xdvngbutton.h
c/redlib/test/locale/: Makefile  l18n  l18n.c  l18n.pot  l18n_de.po  locale
c/redlib/test/locale/de/LC_MESSAGES/: l18n.mo
c/redlib/test/ptrace/: Makefile  a.s  insert  insert.c  insert_trace  insert_trace.c  register  register.c  reverse  reverse.c  trace  trace.c  writetrace  writetrace.c
c/redlib/test/ptrace/libdisasm_src-0.16/src/arch/i386/libdisasm/: quikdis  testdis
c/timemanager/: timemgr.c
c/viaduct/: .cvsignore  .gdb_history  AUTHORS  COMMENTS  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  autogen.sh  config.cache  config.h  config.h.in  config.status  configure  configure.in  edit  errors.sh  gcc.info  headers.h  main.c  main.h  popt.c  run_config  setenv.file  tags  tao.h  tap.c  test  test.c  timer.c  version.c.in  viaduct  viaduct.spec
c/viaduct/cross/: .cvsignore  Makefile  Makefile.am  Makefile.in  cross.h  crossfun.c
c/viaduct/dists/: viaduct-0.11-1.i686.rpm  viaduct-0.11-1.src.rpm  viaduct-0.11.1-1.i686.rpm  viaduct-0.11.1-1.src.rpm
c/viaduct/docs/: .cvsignore  Makefile  Makefile.am  Makefile.in  docs  ethertap.html  plaap.tex  viaduct.1
c/viaduct/encrypt/: .cvsignore  Makefile  Makefile.am  Makefile.in  encrypt.c
c/viaduct/ethertap/: .cvsignore  COPYWRITE  ethertap.c
c/viaduct/intl/: ChangeLog  Makefile.in  VERSION  bindtextdom.c  cat-compat.c  dcgettext.c  dgettext.c  explodename.c  finddomain.c  gettext.c  gettext.h  gettextP.h  hash-string.h  intl-compat.c  l10nflist.c  libgettext.h  linux-msg.sed  loadinfo.h  loadmsgcat.c  localealias.c  po2tbl.sed.in  textdomain.c  xopen-msg.sed
c/viaduct/man/man1/: .cvsignore  viaduct.1.bz2
c/viaduct/po/: POTFILES.in  cat-id-tbl.c  nl.po  viaduct.pot
c/viaduct/serial/: .cvsignore  Makefile  Makefile.am  Makefile.in  serial.c  serial.h  set.file
c/viaduct/socket/: .cvsignore  Makefile  Makefile.am  Makefile.in  bind.c  getby.c  t_socket.h  v_sock.h
c/viaduct2/: AUTHORS  COMMENTS  COPYWRITE  NEWS  README  TODO
c/viaduct2/include/: default.h  main.h  viaduct.h
c/wrapper/: Makefile  common.c  gzwrapper.c  threadpool  threadpool.c  threadpool.c.old  threadpool.txt  wrapper.c  wrapper.h
cpp/: test.cc
java/fre/: image.java
java/win/: click.java
skel/: skeleton.c  skeleton.cc  skeleton.h  skeleton.html  skeleton.java  skeleton.m4  skeleton.perl  skeleton.pike  skeleton.pl  skeleton_kmod.c
(+40 files in other folders)
