dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/pfunc.c)

VERSION=`cat VERSION`
PACKAGE=pfunc

AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)

dnl Checks for programs.
AC_PROG_MAKE_SET
AM_MAINTAINER_MODE


dnl Checks for libraries.
AC_TYPE_SIGNAL

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_CHECK_FUNCS(strstr strtol)

AC_PROG_INSTALL

AM_CONFIG_HEADER(config.h)
AC_OUTPUT(Makefile src/Makefile include/Makefile doc/Makefile)
