dnl Process this file with autoconf to produce a configure script.
AC_INIT(version.c.in)
AC_CANONICAL_SYSTEM
AC_REVISION($Revision: 0.1 $)dnl
AM_CONFIG_HEADER(config.h)
#AC_CONFIG_HEADER(config.h)

VERSION=`cat $srcdir/VERSION`
PACKAGE="redlib"dnl

AM_INIT_AUTOMAKE($PACKAGE, $VERSION, [no-define])
AM_SANITY_CHECK

dnl Checks for programs.
AC_PROG_CC
AC_PROG_LN_S
AC_PROG_RANLIB
AM_MAINTAINER_MODE

dnl Checks for libraries.
AC_CHECK_LIB(bsd, __dummy__)
AC_CHECK_LIB(bz2, BZ2_bzopen)
AC_CHECK_LIB(dl, dlopen)
AC_CHECK_LIB(pthread, pthread_create)
AC_CHECK_LIB(z, gzopen)
AC_CHECK_LIB(mcrypt, mcrypt_generic)
AM_PATH_LIBMCRYPT

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h)
AM_JNI_H

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_CHECK_FUNCS(strerror)

dnl My own m4's, found in m4/
AM_PATH_MODULE_H

AC_OUTPUT(Makefile
				src/Makefile
				java/Makefile
				doc/Makefile
				m4/Makefile
				include/Makefile
				version.c
				include/module.patch
				include/module.h)
